# superai-sdk

./: .cenv  .earthlyignore  .gitignore  .pre-commit-config.yaml  .semgrepignore  .sonarcloud.properties  Earthfile  Jenkinsfile  MANIFEST.in  Makefile  README.md  conftest.py  env.template  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.ci/semgrep_rules/: download_rules.sh  r2c-ci.yaml  secrets.yaml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cassettes/: ai_api.yaml  model_api.yaml
docs/: AI_README.md  ai_quickstart.ipynb  cookbook.md
docs/examples/: basic_vbbk.py  dp_server_with_metric.py  dp_supertask.py  first_workflow.py  getting_started.py  model_active_learning.py  model_task_prelabels.py
fixtures/cassettes/: ai_api.yaml  model_api.yaml
scripts/: integrationTest.sh
superai/: __init__.py  cli.py  client.py  config.py  data_program.py  exceptions.py  settings.yaml  task.py  version.py
superai/apis/: auth.py  data.py  data_program.py  data_program_base.py  dp_instance.py  dp_template.py  ground_truth.py  instance.py  jobs.py  meta_ai_schema.py  model.py  operations.py  project.py  super_task.py  task_instance.py  task_template.py  tasks.py  template.py  workflow.py
superai/cli/: __init__.py  ai.py  ai_instance.py  ai_methods.py  config.py  (+3 more)
tests/: CLI_tests.ipynb  ReadMe.md  pytest.ini  test_config.py  v0_test_1.py  v0_test_2.py
toys_training/: requirements.txt  toys_cls_train.py
(+300 files in other folders)
