[tool.black]
line-length = 120
target-version = ['py39', 'py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
  | superai/apis/meta_ai/meta_ai_graphql_schema.py                   # the root of the project
)
'''

[tool.isort]
profile = "black"

[build-system]
# Fixes editable installs with PEP 660 and new setuptools
# https://github.com/pypa/setuptools/issues/3499
requires = ["setuptools>=58,<63"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["superai"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=lcov:lcov.info --cov-report=term"

[tool.pytest.ini_options.env]
ENV_FOR_SUPERAI="testing"